--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,6 @@
+body{
+  background-color: #111;
+}
 .wrapper{
 
     background:url("images/bg-5.jpg") no-repeat center center;
@@ -21,6 +24,7 @@
         overflow:hidden;
         z-index: 2;
         background-color: rgba(0, 255, 255, 0);
+        border: none;
     
 }
 x
